# ghostpost-backend

./: .gitignore  README.md  db.sqlite3  pyproject.toml
ghostpost/: settings.py  urls.py
ghostpost_api/: models.py  serializers.py  views.py
ghostpost_api/migrations/: 0001_initial.py
